@@ -1,6 +1,7 @@
 package vavi.net.ia;
 
 import java.io.IOException;
+import java.net.http.HttpResponse;
 import java.nio.ByteBuffer;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -10,6 +11,7 @@ import java.security.NoSuchAlgorithmException;
 import java.time.Instant;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
+import java.time.ZoneId;
 import java.time.temporal.ChronoUnit;
 import java.util.ArrayList;
 import java.util.List;
@@ -18,6 +20,7 @@ import java.util.UUID;
 import org.junit.jupiter.api.BeforeAll;
 import vavi.net.ia.dotnet.KeyValuePair;
 import vavi.util.ByteUtil;
+import vavi.util.Debug;
 import vavi.util.properties.annotation.PropsEntity;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -28,70 +31,83 @@ import static org.junit.jupiter.api.Assertions.fail;
 
 public abstract class Base {
 
-    static Client _client = null;
-    static Config _config = null;
+    static boolean localPropertiesExists() {
+        return Files.exists(Paths.get("local.properties"));
+    }
 
-    static LocalDate _startLocalDate, _endLocalDate;
-    static LocalDateTime _startDateTime, _endDateTime;
+    static Client client = null;
+    static Config config = null;
+
+    static LocalDate startDate, endDate;
+    static LocalDateTime startDateTime, endDateTime;
 
     @BeforeAll
-    static void TestInitialize() throws IOException, InterruptedException {
+    static void testInitialize() throws IOException, InterruptedException {
 
-        _config = new Config();
+        config = new Config();
+
+        if (!localPropertiesExists()) {
+            throw new IllegalStateException("config is null");
+        }
 
         try {
-            PropsEntity.Util.bind(_config);
+            PropsEntity.Util.bind(config);
         } catch (IOException e) {
             throw new IllegalStateException(e);
         }
 
-        if (_config.AccessKey == null || _config.AccessKey.isEmpty()) {
+        if (config.accessKey == null || config.accessKey.isEmpty()) {
             throw new IllegalStateException("To run tests, please create a private settings file or set environment variables. For details visit https://github.com/experimentaltvcenter/InternetArchive.NET/blob/main/docs/DEVELOPERS.md#unit-tests");
         }
 
-        _client = Client.Create(_config.AccessKey, _config.SecretKey, false, false);
-        Client.decorators.add(_client::RequestInteractivePriority);
+        client = Client.createByKey(config.accessKey, config.secretKey, false, false);
+        client.decorators.add(client::requestInteractivePriority);
 
-        _endDateTime = LocalDateTime.from(Instant.now()).minus(1, ChronoUnit.DAYS);
-        _startDateTime = _endDateTime.minus(-7, ChronoUnit.DAYS);
+        endDateTime = LocalDateTime.ofInstant(Instant.now(), ZoneId.of("UTC")).minus(1, ChronoUnit.DAYS);
+        startDateTime = endDateTime.minus(7, ChronoUnit.DAYS);
 
-        _endLocalDate = LocalDate.of(_endDateTime.getYear(), _endDateTime.getMonth(), _endDateTime.getDayOfMonth());
-        _startLocalDate = LocalDate.of(_startDateTime.getYear(), _startDateTime.getMonth(), _startDateTime.getDayOfMonth());
+        endDate = LocalDate.from(endDateTime);
+        startDate = LocalDate.from(startDateTime);
 
-        if (!Files.exists(Paths.get(_config.LocalFilename)))
-            Files.writeString(Path.of(_config.LocalFilename), "test file for unit tests - ok to delete");
+        if (!Files.exists(Paths.get(config.localFilename)))
+            Files.writeString(Path.of(config.localFilename), "test file for unit tests - ok to delete");
 
-        Metadata.ReadResponse response = _client.Metadata.ReadAsync(_config.TestItem);
-        if (response.IsDark) {
-            _client.Tasks.MakeUndarkAsync(_config.TestItem, "used in automated tests", null);
-            WaitForServerAsync(_config.TestItem);
-        }
-
-        if (response.Files.stream().anyMatch(x -> x.Format.equals("Text") && x.Name.equals(_config.RemoteFilename))) {
-            CreateTestItemAsync(_config.TestItem, null);
-        }
-        response.close();
+//        Metadata.ReadResponse response = client.metadata.read(config.testItem);
+//        if (response.isDark) {
+//            client.tasks.makeUndark(config.testItem, "used in automated tests", null);
+//            waitForServer(config.testItem);
+//        }
+//
+//        if (response.files.stream().anyMatch(x -> x.format.equals("Text") && x.name.equals(config.remoteFilename))) {
+//            createTestItem(config.testItem, null);
+//        }
+//        response.close();
     }
 
-    private static String _sharedTestIdentifier = null;
+    private static String sharedTestIdentifier = null;
 
-    static String GetSharedTestIdentifierAsync() {
-        if (_sharedTestIdentifier != null) return _sharedTestIdentifier;
+    static String getSharedTestIdentifier() throws IOException, InterruptedException {
+        if (sharedTestIdentifier != null) return sharedTestIdentifier;
 
-        try {
-            return _sharedTestIdentifier = CreateTestItemAsync(null, null);
-        } catch (IOException | InterruptedException e) {
-            throw new RuntimeException(e);
-        }
+        return sharedTestIdentifier = createTestItem(null, null);
     }
 
-    static String GenerateIdentifier() {
+    static String generateIdentifier() {
         return "tmp-" + UUID.randomUUID();
     }
 
-    public static String CreateTestItemAsync(String identifier/*=null*/, List<KeyValuePair<String, Object>> extraMetadata/*=null*/) throws IOException, InterruptedException {
+    public static String createTestItem(String identifier/*=null*/, List<KeyValuePair<String, Object>> extraMetadata/*=null*/) throws IOException, InterruptedException {
+        try {
+            Item.HeadRequest headRequest = new Item.HeadRequest(config.testBucket, config.remoteFilename);
+            HttpResponse<?> r = client.item.head(headRequest);
+Debug.println(config.testBucket + " exists, use this");
+            return config.testBucket;
+        } catch (Client.HttpException e) {
+Debug.println(config.testBucket + " something wrong: " + e.statusCode);
+        }
+
         if (identifier == null) {
-            identifier = GenerateIdentifier();
+            identifier = generateIdentifier();
         }
 
         List<KeyValuePair<String, Object>> metadata = new ArrayList<>();
@@ -102,22 +118,23 @@ public abstract class Base {
         if (extraMetadata != null) metadata.addAll(extraMetadata);
 
         Item.PutRequest request = new Item.PutRequest();
-        request.Bucket = identifier;
-        request.LocalPath = Paths.get(_config.LocalFilename);
-        request.RemoteFilename = _config.RemoteFilename;
-        request.Metadata = metadata;
-        request.CreateBucket = true;
-        request.NoDerive = true;
-        _client.Item.PutAsync(request);
+        request.bucket = identifier;
+        request.localPath = Paths.get(config.localFilename);
+        request.remoteFilename = config.remoteFilename;
+        request.metadata = metadata;
+        request.createBucket = true;
+        request.noDerive = true;
+        client.item.put(request);
 
-        WaitForServerAsync(identifier);
+        waitForServer(identifier);
+        config.testBucket = identifier;
         return identifier;
     }
 
-    static void VerifyHashesAsync(Item.PutRequest request) throws IOException, InterruptedException {
-        assertNotNull(request.Bucket);
+    static void verifyHashes(Item.PutRequest request) throws IOException, InterruptedException {
+        assertNotNull(request.bucket);
 
-        var sourceStream = request.SourceStream == null ? Files.newByteChannel(request.LocalPath) : request.SourceStream;
+        var sourceStream = request.sourceStream == null ? Files.newByteChannel(request.localPath) : request.sourceStream;
 
         try {
             ByteBuffer buffer = ByteBuffer.allocate((int) sourceStream.size());
@@ -128,41 +145,43 @@ public abstract class Base {
             var sha1 = MessageDigest.getInstance("SHA1");
             sha1.update(buffer.array());
 
-            try (var metadata = _client.Metadata.ReadAsync(request.Bucket)) {
+            var metadata = client.metadata.read(request.bucket);
 
-                assertNotNull(metadata);
-                assertTrue(metadata.Files.stream().findFirst().isPresent());
-                var file = metadata.Files.stream().filter(x -> x.Name.equals(request.Filename(false))).findFirst().orElseGet(Metadata.ReadResponse.File::new);
-                assertNotNull(file);
+            assertNotNull(metadata);
+            assertTrue(metadata.files.stream().findFirst().isPresent());
+            var fileOption = metadata.files.stream().filter(x -> x.name.equals(request.filename(false))).findFirst();
+            assertTrue(fileOption.isPresent());
 
-                assertEquals(ByteUtil.toHexString(md5.digest()), file.Md5, "MD5 does not match");
-                assertEquals(ByteUtil.toHexString(sha1.digest()), file.Sha1, "SHA1 does not match");
-            }
+            var file = fileOption.get();
+Debug.printf("%s, %s", ByteUtil.toHexString(md5.digest()), file.md5);
+Debug.printf("%s, %s", ByteUtil.toHexString(sha1.digest()), file.sha1);
+            assertEquals(ByteUtil.toHexString(md5.digest()), file.md5, "MD5 does not match");
+            assertEquals(ByteUtil.toHexString(sha1.digest()), file.sha1, "SHA1 does not match");
         } catch (NoSuchAlgorithmException e) {
             throw new IllegalStateException(e);
         } finally {
-            if (request.SourceStream == null) sourceStream.close();
+            if (request.sourceStream == null) sourceStream.close();
         }
     }
 
-    public static void WaitForServerAsync(String identifier) throws IOException, InterruptedException {
-        WaitForServerAsync(identifier, 20, 10);
+    public static void waitForServer(String identifier) throws IOException, InterruptedException {
+        waitForServer(identifier, 20, 10);
     }
 
-    public static void WaitForServerAsync(String identifier, int minutes/* = 20*/, int secondsBetween/* = 10*/) throws IOException, InterruptedException {
+    public static void waitForServer(String identifier, int minutes, int secondsBetween) throws IOException, InterruptedException {
         int retries = minutes * 60 / secondsBetween;
 
         for (int i = 0; i < retries; i++) {
             Tasks.GetRequest taskRequest = new Tasks.GetRequest();
-            taskRequest.Identifier = identifier;
+            taskRequest.identifier = identifier;
 
-            Tasks.GetResponse response = _client.Tasks.GetAsync(taskRequest);
-            assertTrue(response.Success);
+            Tasks.GetResponse response = client.tasks.get(taskRequest);
+            assertTrue(response.success);
 
-            var summary = response.Value.Summary;
-            assertEquals(0, summary.Error);
+            var summary = response.value.summary;
+            assertEquals(0, summary.error);
 
-            if (summary.Queued == 0 && summary.Running == 0) return;
+            if (summary.queued == 0 && summary.running == 0) return;
             Thread.sleep(secondsBetween * 1000L);
         }
 
